--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_agent_registration_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_agent_registration_password.yml
@@ -1,5 +1,5 @@
 - name: Create New Password for Agent Registration
-  include: ../../all_password_rotation/tasks/create_random_password.yml
+  include_tasks: ../../all_password_rotation/tasks/create_random_password.yml
 
 - name: Add Agent Registration Password To Secret Dictionary
   set_fact:
