--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -1,5 +1,5 @@
 name: "Oracle: OEM Password Rotation"
-run-name: "Oracle: ${{ github.event.inputs.TargetOemEnvironment }}-oem-password-rotation"
+run-name: "Oracle: ${{ github.event.inputs.TargetEnvironmentName }}-oem-password-rotation"
 on:
   workflow_dispatch:
     inputs:
@@ -20,22 +20,18 @@ on:
           - "hmpps-oem-test"
           - "hmpps-oem-preproduction"
           - "hmpps-oem-production"
-          - "delius-core-development"
+          - "delius-core-dev"
           - "delius-core-test"
-          - "delius-core-preproduction"
-          - "delius-core-production"
-          - "delius-mis-development"
-          - "delius-mis-preproduction"
-          - "delius-mis-production"
+          - "delius-core-training"
+          - "delius-core-stage"
+          - "delius-core-preprod"
+          - "delius-core-prod"
+          - "delius-mis-dev"
+          - "delius-mis-stage"
+          - "delius-mis-preprod"
+          - "delius-mis-prod"
       SyncMonitoringPasswords:
         description: "Sync EM Cloud Control Target Monitoring Passwords with Secret Manager"
-        type: choice
-        default: "yes"
-        options:
-          - "yes"
-          - "no"
-      SyncAuditWalletPassword:
-        description: "Sync Audited Interaction Wallet Password with Secret Manager"
         type: choice
         default: "yes"
         options:
@@ -86,7 +82,7 @@ permissions:
 jobs:          
   deployment:
     name: oracle-oem-password-rotation
-    environment: ${{ github.event.inputs.TargetOemEnvironment}}
+    environment: ${{ github.event.inputs.TargetOemEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
@@ -148,12 +144,11 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          $command -i $inventory \
           -e oem_target=${{ steps.prepareoemtargethost.outputs.TargetOemHost }} \
           -e environment_name=${{ github.event.inputs.TargetEnvironmentName }}  \
           -e target_environment_name=${{ github.event.inputs.TargetEnvironmentName }} \
           -e sync_monitoring_passwords=${{ github.event.inputs.SyncMonitoringPasswords }} \
-          -e sync_audit_wallet_password=${{ github.event.inputs.SyncAuditWalletPassword }} \
           -e rotate_rman_password=${{ github.event.inputs.RotateRMANPassword }} \
           -e rotate_oem_passwords=${{ github.event.inputs.RotateOEMPasswords }} ${{ github.event.inputs.VerboseOutput }}
           
