--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
@@ -2,13 +2,21 @@
   set_fact:
     secretsmanager_passwords_dict: {}
 
-- name: Setup Temporary Secrets Dictionary
+- name: Setup Temporary Secrets Dictionary For Non OEM
   set_fact:
     secret_password_dict:
       account:
-        account_name: "{{ account_name }}"
+        account_name: "{{ target_account_name }}"
         assume_role_name: "EC2OracleEnterpriseManagementSecretsRole"
         secret: "{{ secret_name }}"
+  when: not target_environment_name is search('hmpps-oem')
+
+- name: Setup Temporary Secrets Dictionary For OEM
+  set_fact:
+    secret_password_dict:
+      account:
+        secret: "{{ secret_name }}"
+  when: target_environment_name is search('hmpps-oem')
 
 - name: Combine {{ db_username }} User To Secrets Dictionary
   set_fact:
