--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
@@ -1,15 +1,15 @@
 - name: Sync SYS Password Parameter in the {{ target_environment_name }}
   block:
-    - name: Get EC2 Metadata Facts
-      amazon.aws.ec2_metadata_facts:
-
-    - name: Set Target Account Name For Secrets
-      set_fact:
-        target_account_name: "{{ target_environment_name.split('-')[:2] | join('-') + '-' + aws_environment }}"
-
     - name: Work Out Host Match And Environment
       when: not target_environment_name is search('hmpps-oem')
       block:
+        - name: Get EC2 Metadata Facts
+          amazon.aws.ec2_metadata_facts:
+
+        - name: Set Target Account Name For Secrets
+          set_fact:
+            target_account_name: "{{ target_environment_name.split('-')[:2] | join('-') + '-' + aws_environment }}"
+
         - name: Set Host Match
           set_fact:
             host_match: "{{ target_environment_name }}"
@@ -48,7 +48,6 @@
         - name: Set the Monitoring Credentials for Physical Standby Databases
           include_tasks: set_monitoring_password.yml
           vars:
-            account_name: "{{ target_account_name }}"
             secret_name: "{{ secret_environment if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-oracle-' + (target_env.split()[0][3:6] | lower + '-db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
             db_username: sys
             monitor_type: oracle_database
@@ -88,7 +87,6 @@
     - name: Set the Monitoring Credentials for Primary Databases
       include_tasks: set_monitoring_password.yml
       vars:
-        account_name: "{{ target_account_name }}"
         secret_name: "{{ secret_environment if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-oracle-' + (target_env.split()[0][3:6] | lower + '-db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
         db_username: dbsnmp
         monitor_type: oracle_database
@@ -115,7 +113,7 @@
 
     - name: Create Lists For ASM
       set_fact:
-        unique_list: "{{ (unique_list | default([]) + [ env.split()[0] | regex_replace('^(\\+)(.*-db-)\\d{1}.*$','\\2') + ' ' + env.split()[1] + ' ' + env.split()[2] | string]) | unique }}"
+        unique_list: "{{ (unique_list | default([]) + [ env.split()[0] | regex_replace('^(\\+)(.*)$','\\2') if target_environment_name is search('hmpps-oem') else env.split()[0] | regex_replace('^(\\+)(.*-db-)\\d{1}.*$','\\2') + ' ' + env.split()[1] + ' ' + env.split()[2] | string]) | unique }}"
         monitor_list: "{{ monitor_list | default([]) + [ env ] }}"
       loop: "{{ osm_instance.stdout_lines }}"
       loop_control:
@@ -124,7 +122,6 @@
     - name: Set the Monitoring Credentials for ASM Instances
       include_tasks: set_monitoring_password.yml
       vars:
-        account_name: "{{ target_account_name }}"
         secret_name: "{{ '/ec2/' + ec2_name + '/asm-passwords' if target_environment_name is search('hmpps-oem') else target_environment_name + '-oracle-' + (target_env.split()[0] | regex_replace('^.*-(\\w{3})-db-$','\\1-') + 'db-dba-passwords' if ( target_env.split()[2] == 'mis') else 'db-dba-passwords') }}"
         db_username: "{{ 'ASMSNMP'  if (target_environment_name is search('hmpps-oem')) else 'asmsnmp' }}"
         monitor_type: osm_instance
