Include ssm bucket for non oem environments

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -158,15 +158,16 @@ jobs:
             [[ "${Environment}" == "stage" || "${Environment}" = "preprod" ]] && OemEnvironment=preproduction
             [[ "${Environment}" == "prod" ]] && OemEnvironment=production
             TargetOemEnvironment=hmpps-oem-${OemEnvironment}
-            IncludeSsmBucket="-e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}"
+            IncludeSsmBucket="-e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}" 
           else
             TargetOemEnvironment=${{ github.event.inputs.TargetEnvironment }}
+            IncludeSsmBucket=""
           fi
-
 
           echo "targets=$targets" >> $GITHUB_OUTPUT
           echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
           echo "TargetEnvironmentName=${{ github.event.inputs.TargetEnvironment }}" >> $GITHUB_OUTPUT
+          echo "IncludeSsmBucket=${IncludeSsmBucket}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
         id: login-aws
@@ -181,7 +182,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $database_command -i $inventory $IncludeSsmBucket \
+          $database_command -i $inventory ${{ steps.definetargets.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
           -e environment_name=${{ github.event.inputs.TargetEnvironment }} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
 
