--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -85,6 +85,7 @@
 - name: Set Secret Manager Name
   set_fact:
     secret_name: "{{ build_secret_name.stdout }}"
+  when: database_primary_sid is defined
 
 #  The rest of this play is in a block so we can re-enable monitoring even if it fails
 - name: Rotate Passwords
