Add workflow call event

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -1,5 +1,6 @@
 name: "Oracle: Password Rotation"
-run-name: "Oracle: ${{ github.event.inputs.TargetEnvironment }}-password-rotation"
+run-name: "Oracle: ${{ inputs.TargetEnvironment }}-password-rotation"
+
 on:
   workflow_dispatch:
     inputs:
@@ -48,6 +49,13 @@ on:
         description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
         default: "main"
+  workflow_call:
+    inputs:
+      TargetEnvironment:
+        description: "Target environment"
+        required: true
+        type: string
+
 env:
   ansible_config: operations/playbooks/ansible.cfg
   database_command: ansible-playbook operations/playbooks/oracle_password_rotation/database_password_rotation.yml
