--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -81,6 +81,7 @@ jobs:
       TargetOemEnvironment: ${{ steps.definetargets.outputs.TargetOemEnvironment }}
       TargetEnvironmentName: ${{ steps.definetargets.outputs.TargetEnvironmentName }}
       RotateGroups: ${{ steps.definetargets.outputs.targets }}
+      IncludeSsmBucket: ${{ steps.definetargets.outputs.IncludeSsmBucket }}
     steps:
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
@@ -308,7 +309,7 @@ jobs:
         shell: bash
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $database_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          $database_command -i $inventory ${{ needs.oracle_password_rotation.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ needs.oracle_password_rotation.outputs.RotateGroups }} \
           -e environment_name=${{ github.event.inputs.TargetEnvironment }} \
           -e unlock_system_passwords=yes ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
