--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -1,5 +1,5 @@
 name: "Oracle: OEM Password Rotation"
-run-name: "Oracle: ${{ github.event.inputs.TargetEnvironmentName }}-oem-password-rotation"
+run-name: "Oracle: ${{ inputs.TargetEnvironmentName }}-oem-password-rotation"
 on:
   workflow_dispatch:
     inputs:
@@ -68,6 +68,29 @@ on:
         description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
         default: "main"
+  workflow_call:
+    inputs:
+      TargetOemEnvironment:
+        description: "Target environment"
+        required: true
+        type: string
+      TargetEnvironmentName:
+        description: "Target Environment Name"
+        required: true
+        type: string
+      SyncMonitoringPasswords:
+        description: "Sync EM Cloud Control Target Monitoring Passwords with Secret Manager"
+        required: true
+        type: string
+      RotateRMANPassword:
+        description: "Rotate RMAN Catalog Password"
+        required: true
+        type: string
+      RotateOEMPasswords:
+        description: "Rotate EM Cloud Control Passwords"
+        required: true
+        type: string
+
 env:
   ansible_config: operations/playbooks/ansible.cfg
   command: ansible-playbook operations/playbooks/oracle_password_rotation/oem_password_rotation.yml
