--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -1,5 +1,6 @@
 name: "Oracle: Password Rotation"
-run-name: "Oracle: ${{ github.event.inputs.TargetEnvironment }}-password-rotation"
+run-name: "Oracle: ${{ inputs.TargetEnvironment }}-password-rotation"
+
 on:
   workflow_dispatch:
     inputs:
@@ -48,6 +49,13 @@ on:
         description: "Source version for the modernisation-platform-configuration-management. Enter a pull request, branch, commit ID, tag, or reference."
         type: string
         default: "main"
+  workflow_call:
+    inputs:
+      TargetEnvironment:
+        description: "Target environment"
+        required: true
+        type: string
+
 env:
   ansible_config: operations/playbooks/ansible.cfg
   database_command: ansible-playbook operations/playbooks/oracle_password_rotation/database_password_rotation.yml
@@ -73,6 +81,7 @@ jobs:
       TargetOemEnvironment: ${{ steps.definetargets.outputs.TargetOemEnvironment }}
       TargetEnvironmentName: ${{ steps.definetargets.outputs.TargetEnvironmentName }}
       RotateGroups: ${{ steps.definetargets.outputs.targets }}
+      IncludeSsmBucket: ${{ steps.definetargets.outputs.IncludeSsmBucket }}
     steps:
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
@@ -158,15 +167,17 @@ jobs:
             [[ "${Environment}" == "stage" || "${Environment}" = "preprod" ]] && OemEnvironment=preproduction
             [[ "${Environment}" == "prod" ]] && OemEnvironment=production
             TargetOemEnvironment=hmpps-oem-${OemEnvironment}
-            IncludeSsmBucket="-e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}"
+            IncludeSsmBucket="-e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}" 
           else
             TargetOemEnvironment=${{ github.event.inputs.TargetEnvironment }}
+            IncludeSsmBucket=""
           fi
 
 
           echo "targets=$targets" >> $GITHUB_OUTPUT
           echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
           echo "TargetEnvironmentName=${{ github.event.inputs.TargetEnvironment }}" >> $GITHUB_OUTPUT
+          echo "IncludeSsmBucket=${IncludeSsmBucket}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
         id: login-aws
@@ -181,7 +192,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $database_command -i $inventory $IncludeSsmBucket \
+          $database_command -i $inventory ${{ steps.definetargets.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
           -e environment_name=${{ github.event.inputs.TargetEnvironment }} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
 
@@ -298,7 +309,7 @@ jobs:
         shell: bash
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $database_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
+          $database_command -i $inventory ${{ needs.oracle_password_rotation.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ needs.oracle_password_rotation.outputs.RotateGroups }} \
           -e environment_name=${{ github.event.inputs.TargetEnvironment }} \
           -e unlock_system_passwords=yes ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
