Add with parameters

--- a/.github/workflows/oracle-db-oem-password-rotation-schedule.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation-schedule.yml
@@ -1,9 +1,9 @@
 name: "Oracle: Schedule OEM Password Rotation"
 on:
   schedule:
-    - cron: '00 10 * * WED'
     - cron: '00 11 * * WED'
-    - cron: '00 20 * * 1/1'
+    - cron: '00 20 * * SUN'
+
 jobs:
   prepare-run-matrix:
     runs-on: ubuntu-latest
@@ -55,4 +55,8 @@ jobs:
     uses:
       ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-oem-password-rotation.yml@main
     with:
-      TargetEnvironment: ${{ matrix.TargetEnvironment }}
+      TargetOemEnvironment: ${{ matrix.TargetOemEnvironment }}
+      TargetEnvironmentName: ${{ matrix.TargetEnvironmentName }}
+      SyncMonitoringPasswords: ${{ matrix.SyncMonitoringPasswords }}
+      RotateRMANPassword: ${{ matrix.RotateRMANPassword }}
+      RotateOEMPasswords: ${{ matrix.RotateOEMPasswords }}
