Correction to handle schedule event

--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -1,5 +1,5 @@
 name: "Oracle: OEM Password Rotation"
-run-name: "Oracle: ${{ inputs.TargetEnvironmentName }}-oem-password-rotation"
+run-name: "Oracle: ${{ github.event.inputs.TargetOemEnvironment }}-oem-password-rotation"
 on:
   workflow_dispatch:
     inputs:
@@ -116,8 +116,28 @@ jobs:
       - name: Prepare Ansbile OEM Target Host
         id: prepareoemtargethost
         run: |
-          TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/g')"
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
+          then
+            TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/g')"
+            TargetEnvironmentName="${{ github.event.inputs.TargetEnvironmentName }}"
+            SyncMonitoringPasswords="${{ github.event.inputs.SyncMonitoringPasswords }}"
+            RotateRMANPassword="${{ github.event.inputs.RotateRMANPassword }}"
+            RotateOEMPasswords="${{ github.event.inputs.RotateOEMPasswords }}"
+            VerboseOutput="${{ github.event.inputs.VerboseOutput }}"
+          elif [[ "${{ github.event_name }}" == "schedule" ]]
+          then
+            TargetOemHost=="environment_name_$(echo ${{ inputs.TargetOemEnvironment }}  | sed 's/-/_/g')"
+            TargetEnvironmentName="${{ inputs.TargetEnvironmentName }}"
+            SyncMonitoringPasswords="${{ inputs.SyncMonitoringPasswords }}"
+            RotateRMANPassword="${{ inputs.RotateRMANPassword }}"
+            RotateOEMPasswords="${{ inputs.RotateOEMPasswords }}"
+            VerboseOutput=""
+          fi
           echo "TargetOemHost=${TargetOemHost}" >> $GITHUB_OUTPUT
+          echo "TargetEnvironmentName=${TargetEnvironmentName}" >> $GITHUB_OUTPUT
+          echo "SyncMonitoringPasswords=${SyncMonitoringPasswords}" >> $GITHUB_OUTPUT
+          echo "RotateRMANPassword=${RotateRMANPassword}" >> $GITHUB_OUTPUT
+          echo "RotateOEMPasswords=${RotateOEMPasswords}"  >> $GITHUB_OUTPUT
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
         uses: actions/checkout@v4
@@ -169,9 +189,9 @@ jobs:
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $command -i $inventory \
           -e oem_target=${{ steps.prepareoemtargethost.outputs.TargetOemHost }} \
-          -e environment_name=${{ github.event.inputs.TargetEnvironmentName }}  \
-          -e target_environment_name=${{ github.event.inputs.TargetEnvironmentName }} \
-          -e sync_monitoring_passwords=${{ github.event.inputs.SyncMonitoringPasswords }} \
-          -e rotate_rman_password=${{ github.event.inputs.RotateRMANPassword }} \
-          -e rotate_oem_passwords=${{ github.event.inputs.RotateOEMPasswords }} ${{ github.event.inputs.VerboseOutput }}
+          -e environment_name=${{ steps.prepareoemtargethost.outputs.TargetEnvironmentName }}  \
+          -e target_environment_name=${{steps.prepareoemtargethost.outputs.TargetEnvironmentName }} \
+          -e sync_monitoring_passwords=${{ steps.prepareoemtargethost.outputs.SyncMonitoringPasswords }} \
+          -e rotate_rman_password=${{ steps.prepareoemtargethost.outputs.RotateRMANPassword }} \
+          -e rotate_oem_passwords=${{ steps.prepareoemtargethost.outputs.RotateOEMPasswords }} ${{ steps.prepareoemtargethost.outputs.VerboseOutput }}
           
