--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -137,7 +137,8 @@ jobs:
           echo "TargetEnvironmentName=${TargetEnvironmentName}" >> $GITHUB_OUTPUT
           echo "SyncMonitoringPasswords=${SyncMonitoringPasswords}" >> $GITHUB_OUTPUT
           echo "RotateRMANPassword=${RotateRMANPassword}" >> $GITHUB_OUTPUT
-          echo "RotateOEMPasswords=${RotateOEMPasswords}"  >> $GITHUB_OUTPUT
+          echo "RotateOEMPasswords=${RotateOEMPasswords}" >> $GITHUB_OUTPUT
+          echo "VerboseOutput=${VerboseOutput}" >> $GITHUB_OUTPUT
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
         uses: actions/checkout@v4
