Job to check duplicate in progress

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -68,9 +68,32 @@ permissions:
   packages: read
   id-token: write
 
-jobs:          
+jobs:
+  oracle_duplicate_in_progress:
+    name: oracle-duplicate-in-progress
+    environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    continue-on-error: false
+    outputs:
+      SkipPasswordRotation: ${{ steps.checkduplicaterunning.outputs.SkipPasswordRotation }}
+    steps:
+
+      - name: Check Duplicate Job Running
+        id: checkduplicaterunning
+        shell: bash
+        run: |
+          DUPLICATE_JOBS_STATUS=$(aws ssm get-parameters --region ${AWS_REGION} --names "/oracle/duplicate/mis_primarydb/status" "/oracle/duplicate/delius_primarydb/status" | jq -r '.Parameters[] | select(.Value=="Started") | .Value' | uniq)
+          if [[ "${DUPLICATE_JOBS_STATUS}" == "Started" ]]
+          then
+            echo "SkipPasswordRotation=yes" >> $GITHUB_OUTPUT
+          fi
+
   oracle_password_rotation:
+    if: ${{ needs.oracle_duplicate_in_progress.outputs.SkipPasswordRotation != 'yes' }}
     name: oracle-password-rotation
+    needs: oracle-duplicate-in-progress
     environment: ${{ github.event.inputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
     container:
@@ -95,7 +118,7 @@ jobs:
             playbooks/alfresco_wallet
             playbooks/ansible.cfg
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
@@ -107,7 +130,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
@@ -119,7 +142,7 @@ jobs:
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Define Targets
