--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -150,11 +150,19 @@ jobs:
         working-directory: ${{ env.inventory }}
         run: |
           targets=""
-          if [[ ! "${{ github.event.inputs.TargetEnvironment }}" =~ oem ]]
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
           then
-            prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
+            TargetEnvironment="${{ github.event.inputs.TargetEnvironment }}"
+          elif [[ "${{ github.event_name }}" == "schedule" ]]
+          then
+            TargetEnvironment="${{ inputs.TargetEnvironment }}"
+          fi
+
+          if [[ ! "${TargetEnvironment}" =~ oem ]]
+          then
+            prefix="environment_name_$(echo ${TargetEnvironment} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
           else
-            prefix="environment_name_$(echo ${{ github.event.inputs.TargetEnvironment }} | sed 's/-/_/g')"
+            prefix="environment_name_$(echo ${TargetEnvironment} | sed 's/-/_/g')"
           fi
           build_target() {
             databasetype=${1}
@@ -168,8 +176,8 @@ jobs:
             echo
           }
           
-          ApplicationType=$(echo ${{ github.event.inputs.TargetEnvironment }} | cut -d- -f1-2)
-          Environment=$(echo ${{ github.event.inputs.TargetEnvironment }} | cut -d- -f3)
+          ApplicationType=$(echo ${TargetEnvironment} | cut -d- -f1-2)
+          Environment=$(echo ${TargetEnvironment} | cut -d- -f3)
 
           if [[ "${ApplicationType}" == "delius-core" ]]
           then
@@ -192,14 +200,13 @@ jobs:
             TargetOemEnvironment=hmpps-oem-${OemEnvironment}
             IncludeSsmBucket="-e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}" 
           else
-            TargetOemEnvironment=${{ github.event.inputs.TargetEnvironment }}
+            TargetOemEnvironment=${TargetEnvironment}
             IncludeSsmBucket=""
           fi
 
-
           echo "targets=$targets" >> $GITHUB_OUTPUT
           echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
-          echo "TargetEnvironmentName=${{ github.event.inputs.TargetEnvironment }}" >> $GITHUB_OUTPUT
+          echo "TargetEnvironmentName=${TargetEnvironment}" >> $GITHUB_OUTPUT
           echo "IncludeSsmBucket=${IncludeSsmBucket}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
@@ -238,7 +245,7 @@ jobs:
             playbooks/oracle_password_rotation
             playbooks/ansible.cfg
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
@@ -250,7 +257,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
@@ -262,7 +269,7 @@ jobs:
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-modernisation-platform-facts
           path: roles
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Configure AWS Credentials
@@ -305,7 +312,7 @@ jobs:
             playbooks/oracle_password_rotation
             playbooks/ansible.cfg
           path: operations
-          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
           fetch-depth: 0
 
       - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
@@ -317,7 +324,7 @@ jobs:
             ansible/hosts
             ansible/group_vars
           path: inventory
-          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
           fetch-depth: 0
 
       - name: Configure AWS Credentials
