--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -465,6 +465,8 @@ jobs:
     if: ${{ github.event_name == 'repository_dispatch' }}
     name: oracle-rman-duplicate-check
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
     continue-on-error: false
     outputs:
       TargetEnvironment: ${{ steps.response.outputs.TargetEnvironment }}
@@ -475,6 +477,14 @@ jobs:
       SourceLegacy: ${{ steps.response.outputs.SourceLegacy }}
       JobId: ${{ github.job }}
     steps:
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
 
       - name: Responding to Repository Dispatch event
         id: response
