--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -149,6 +149,7 @@ jobs:
           Inputs=$Inputs"\"Phase\": \"Duplicate Started\""
           Inputs=$Inputs"}"
           echo "Inputs="$(echo $Inputs | jq @json)
+          Inputs=$(echo $Inputs | jq -r | jq @json)
           echo "Inputs="$(echo $Inputs | jq @json) >> $GITHUB_OUTPUT
 
           aws ssm put-parameter --region eu-west-2 --name "/oracle-duplicate/${DuplicateTarget}" --type String --overwrite --value "$(echo $Inputs | jq -r)" --description "Runtime status details of duplicate jobs"
